--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,27 +3,57 @@ name: Build, Push, and Update Manifest
 on:
   push:
     branches:
-      - main # Chỉ chạy khi push lên nhánh main
+      - main
+  pull_request:
+    branches:
+      - main
 
-# Cấp quyền "write" để Action có thể commit vào chính repo này
+# Grant write permissions for Actions to commit to this repo
 permissions:
   contents: write
+  packages: write
+  security-events: write
 
 env:
-  # Tên image trên Docker Hub (chúng ta dùng tên repo luôn)
-  IMAGE_NAME: johnnyp013/my-first-gitops
+  # Docker Hub image name
+  IMAGE_NAME: datpham-qualgo/my-first-gitops
   
-  # Tên file deployment
-  MANIFEST_PATH: deployment.yaml
+  # Kubernetes manifest file path
+  MANIFEST_PATH: k8s/deployment.yaml
 
 jobs:
+  security-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Run security audit
+        run: npm audit --audit-level high
+        continue-on-error: true
+
   build-push-and-update:
     runs-on: ubuntu-latest
+    needs: security-scan
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
-        # Checkout repo hiện tại
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -36,8 +66,11 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.IMAGE_NAME }}
-          # Dùng mã Git SHA ngắn làm tag, ví dụ: a1b2c3d
-          tags: type=sha,prefix=,suffix=,format=short 
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -45,27 +78,51 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          # Đẩy image với tag là mã SHA (ví dụ: johnnyp013/my-first-gitops:a1b2c3d)
-          tags: ${{ steps.meta.outputs.version }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
 
-      - name: Cập nhật image tag trong file YAML
+      - name: Update image tag in Kubernetes manifest
         run: |
-          # Lấy tag từ bước meta (ví dụ: a1b2c3d)
-          NEW_TAG="${{ steps.meta.outputs.version }}"
-          echo "Image tag mới là $NEW_TAG"
+          # Get the SHA-based tag
+          NEW_TAG=$(echo "${{ steps.meta.outputs.tags }}" | grep -E "main-[a-f0-9]{7}" | head -1 | cut -d':' -f2)
+          if [ -z "$NEW_TAG" ]; then
+            echo "Error: Could not extract SHA tag"
+            exit 1
+          fi
           
-          # Dùng sed để tìm dòng `image:` và thay thế tag
+          echo "New image tag: $NEW_TAG"
+          
+          # Update deployment.yaml with new image tag
           sed -i "s|${{ env.IMAGE_NAME }}:.*|${{ env.IMAGE_NAME }}:${NEW_TAG}|g" ${{ env.MANIFEST_PATH }}
+          
+          # Verify the change
+          echo "Updated manifest:"
+          grep "image:" ${{ env.MANIFEST_PATH }}
 
-      - name: Commit và Push thay đổi (nếu có)
+      - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "bot@github.com"
+          git config --global user.email "actions@github.com"
+          
+          # Check if manifest file exists
+          if [ ! -f "${{ env.MANIFEST_PATH }}" ]; then
+            echo "Error: Manifest file ${{ env.MANIFEST_PATH }} not found"
+            exit 1
+          fi
+          
           git add ${{ env.MANIFEST_PATH }}
-          # Chỉ commit nếu file deployment.yaml thực sự thay đổi
+          
+          # Only commit if there are changes
           if ! git diff --staged --quiet; then
-            git commit -m "Cập nhật image tag thành ${{ steps.meta.outputs.version }}"
+            git commit -m "🚀 Update image tag to ${{ steps.meta.outputs.version }}
+            
+            - Updated image in ${{ env.MANIFEST_PATH }}
+            - Triggered by commit: ${{ github.sha }}
+            - Build URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
             git push
           else
-            echo "Không có thay đổi."
+            echo "No changes to commit"
           fi
