--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,13 +2,19 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-website-svc
+  labels:
+    app: my-website
+    service: my-website-svc
 spec:
-  # Giữ nguyên NodePort để truy cập từ bên ngoài
+  # Keep NodePort for external access
   type: NodePort 
   selector:
     app: my-website
   ports:
-  - protocol: TCP
+  - name: http
+    protocol: TCP
     port: 80
-    # Sửa cổng này thành 8080 (cổng của container)
-    targetPort: 8080
+    # Fix this port to 8080 (container port)
+    targetPort: http
+    # Optional: specify nodePort for consistent access
+    # nodePort: 30080
